--- a/timer.html
+++ b/timer.html
@@ -163,8 +163,8 @@
             $('#ok-button').click(function(){
                 toggle_manual_time_ui();
                 show_function_ui();
-                timer.seconds = parseInt($('#hours').val())*3600||0 +parseInt($('#minutes').val())*60||0 +
-                    parseInt($('#seconds').val())||0;
+                timer.seconds = (parseInt($('#hours').val())*3600||0) + (parseInt($('#minutes').val())*60||0)
+                    + (parseInt($('#seconds').val())||0);
                 timer.start();
             })
 
